New accuracy 0.74 in kaggle

--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,11 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_feature = DF.drop(['Name', 'Sex', 'Ticket', 'PassengerId','Survived','Cabin'], axis=1)\n",
+    "train_feature = DF.drop(['Name', 'Ticket', 'PassengerId','Survived','Cabin'], axis=1)\n",
     "train_labels = DF['Survived'].copy()"
    ]
   },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -223,6 +223,7 @@
      "data": {
       "text/plain": [
        "Pclass        0\n",
+       "Sex           0\n",
        "Age         177\n",
        "SibSp         0\n",
        "Parch         0\n",
@@ -231,7 +232,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,11 +354,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_feature = pd.concat([train_feature, pd.get_dummies(DF['TitleGroup'])], axis=1)"
+    "# train_feature = pd.concat([train_feature, pd.get_dummies(DF['TitleGroup'])], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature['TitleGroup'] = train_feature['TitleGroup'].map({'Mr': 0, 'Miss': 1, 'Mrs': 2, 'Master': 3, }).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "將sex mapping成數值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature['Sex'] = train_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)"
    ]
   },
   {
@@ -370,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -395,128 +421,79 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
        "      <th>Embarked</th>\n",
-       "      <th>Master</th>\n",
-       "      <th>Miss</th>\n",
-       "      <th>Mr</th>\n",
-       "      <th>Mrs</th>\n",
-       "      <th>Noble</th>\n",
-       "      <th>Officer</th>\n",
-       "      <th>Religious</th>\n",
-       "      <th>Scholar</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0.827377</td>\n",
+       "      <td>0</td>\n",
        "      <td>-0.565736</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.473674</td>\n",
        "      <td>-0.502445</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>-1.566107</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.663861</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.473674</td>\n",
        "      <td>0.786845</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.827377</td>\n",
+       "      <td>1</td>\n",
        "      <td>-0.258337</td>\n",
        "      <td>0</td>\n",
        "      <td>-0.473674</td>\n",
        "      <td>-0.488854</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>-1.566107</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.433312</td>\n",
        "      <td>1</td>\n",
        "      <td>-0.473674</td>\n",
        "      <td>0.420730</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.827377</td>\n",
+       "      <td>0</td>\n",
        "      <td>0.433312</td>\n",
        "      <td>0</td>\n",
        "      <td>-0.473674</td>\n",
        "      <td>-0.486337</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Pclass       Age  SibSp     Parch      Fare  Embarked  Master  Miss  Mr  \\\n",
-       "0  0.827377 -0.565736      1 -0.473674 -0.502445         2       0     0   1   \n",
-       "1 -1.566107  0.663861      1 -0.473674  0.786845         0       0     0   0   \n",
-       "2  0.827377 -0.258337      0 -0.473674 -0.488854         2       0     1   0   \n",
-       "3 -1.566107  0.433312      1 -0.473674  0.420730         2       0     0   0   \n",
-       "4  0.827377  0.433312      0 -0.473674 -0.486337         2       0     0   1   \n",
-       "\n",
-       "   Mrs  Noble  Officer  Religious  Scholar  \n",
-       "0    0      0        0          0        0  \n",
-       "1    1      0        0          0        0  \n",
-       "2    0      0        0          0        0  \n",
-       "3    1      0        0          0        0  \n",
-       "4    0      0        0          0        0  "
+       "     Pclass  Sex       Age  SibSp     Parch      Fare  Embarked\n",
+       "0  0.827377    0 -0.565736      1 -0.473674 -0.502445         2\n",
+       "1 -1.566107    1  0.663861      1 -0.473674  0.786845         0\n",
+       "2  0.827377    1 -0.258337      0 -0.473674 -0.488854         2\n",
+       "3 -1.566107    1  0.433312      1 -0.473674  0.420730         2\n",
+       "4  0.827377    0  0.433312      0 -0.473674 -0.486337         2"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,13 +528,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "weights = np.zeros(len(train_feature.columns))\n",
     "\n",
-    "learningRate = 0.05\n",
+    "learningRate = 0.01\n",
     "\n",
     "Iterations = 15\n",
     "# 紀錄error變化\n",
@@ -593,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,16 +609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.25925925925925924"
+       "0.3254769921436588"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,8 +675,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "weights = np.zeros(len(train_feature.columns))\n",
@@ -715,8 +698,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "def pla_sgd(data, labels, iterations):\n",
@@ -752,16 +739,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7093153759820426"
+       "0.6947250280583613"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,59 +960,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "test = pd.read_csv('test.csv')\n",
     "\n",
-    "test_feature = test.drop(['Name', 'Sex', 'Ticket', 'PassengerId','Cabin'], axis=1)\n",
+    "test_feature = test.drop(['Name', 'Ticket', 'PassengerId','Cabin'], axis=1)\n",
     "median_age = test_feature['Age'].dropna().median()\n",
     "test_feature.loc[ (test_feature['Age'].isnull()), 'Age'] = median_age\n",
     "test_feature['Embarked'] = test_feature['Embarked'].fillna(test_feature['Embarked'].mode()[0])\n",
     "test_feature['Embarked'] = test_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)\n",
+    "test_feature['Sex'] = test_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)\n",
     "\n",
-    "test['Title'] = test['Name'].map(lambda name:name.split(',')[1].split('.')[0].strip())\n",
-    "test['TitleGroup'] = test['Title'].map(title_dict)\n",
-    "test_feature = pd.concat([test_feature, pd.get_dummies(test['TitleGroup'])], axis=1)\n",
-    "test_feature.insert(loc=10, column='Noble', value=0)\n",
+    "# test['Title'] = test['Name'].map(lambda name:name.split(',')[1].split('.')[0].strip())\n",
+    "# test['TitleGroup'] = test['Title'].map(title_dict)\n",
+    "# test_feature = pd.concat([test_feature, pd.get_dummies(test['TitleGroup'])], axis=1)\n",
+    "# test_feature.insert(loc=10, column='Noble', value=0)\n",
     "\n",
     "# fare有空值\n",
     "test_feature.loc[ (test_feature['Fare'].isnull()), 'Fare'] = test_feature['Fare'].dropna().median()\n",
     "test_feature[['Pclass', 'Age', 'Parch', 'Fare']] = scaler.transform(test_feature[['Pclass', 'Age', 'Parch', 'Fare']])\n",
     "\n",
     "y_pred = pla_predict(test_feature)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PassengerId      0\n",
-       "Pclass           0\n",
-       "Name             0\n",
-       "Sex              0\n",
-       "Age             86\n",
-       "SibSp            0\n",
-       "Parch            0\n",
-       "Ticket           0\n",
-       "Fare             1\n",
-       "Cabin          327\n",
-       "Embarked         0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.isnull().sum()"
    ]
   },
   {
@@ -1032,16 +994,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7129186602870813"
+       "0.7607655502392344"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1061,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>893</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1114,7 +1076,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>896</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1123,13 +1085,13 @@
       "text/plain": [
        "   PassengerId  Survived\n",
        "0          892         0\n",
-       "1          893         0\n",
+       "1          893         1\n",
        "2          894         0\n",
        "3          895         0\n",
-       "4          896         0"
+       "4          896         1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1145,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
