--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,11 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_feature = DF.drop(['Name', 'Ticket', 'PassengerId','Survived','Cabin'], axis=1)\n",
+    "# train_feature = DF.drop(['Name', 'Ticket', 'PassengerId','Survived','Cabin'], axis=1)\n",
+    "train_feature = DF[['Age', 'Sex', 'Embarked', 'SibSp', 'Parch', 'Pclass']].copy()\n",
     "train_labels = DF['Survived'].copy()"
    ]
   },
@@ -250,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,6 +317,7 @@
     "                \"Major\":      \"Officer\",\n",
     "                \"Mlle\":       \"Miss\",\n",
     "                \"Don\":        \"Noble\",\n",
+    "                \"Dona\":        \"Noble\",\n",
     "                \"the Countess\":\"Noble\",\n",
     "                \"Ms\":         \"Mrs\",\n",
     "                \"Mme\":        \"Mrs\",\n",
@@ -338,11 +340,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_feature['Embarked'] = train_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)"
+    "train_feature['Embarked'] = train_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)\n",
+    "# 再做ohe\n",
+    "# train_feature = pd.concat([train_feature, pd.get_dummies(train_feature['Embarked'])], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pclass做one hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature = pd.concat([train_feature, pd.get_dummies(train_feature['Pclass'], prefix='pclass')], axis=1)"
    ]
   },
   {
@@ -354,49 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# train_feature = pd.concat([train_feature, pd.get_dummies(DF['TitleGroup'])], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_feature['TitleGroup'] = train_feature['TitleGroup'].map({'Mr': 0, 'Miss': 1, 'Mrs': 2, 'Master': 3, }).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "將sex mapping成數值"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_feature['Sex'] = train_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 04. Scaler\n",
-    "將數值的feature做正規化"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -420,63 +398,214 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>Embarked</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>TitleGroup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.827377</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.565736</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.473674</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age     Sex  Embarked  SibSp  Parch  Pclass  TitleGroup\n",
+       "0  22.0    male         2      1      0       3           2\n",
+       "1  38.0  female         0      1      0       1           3\n",
+       "2  26.0  female         2      0      0       3           1\n",
+       "3  35.0  female         2      1      0       1           3\n",
+       "4  35.0    male         2      0      0       3           2"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "train_feature['TitleGroup'] = le.fit_transform(DF['TitleGroup'])\n",
+    "train_feature.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "將TitleGroup 做one hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature = pd.concat([train_feature, pd.get_dummies(DF['TitleGroup'])], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "將sex mapping成數值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature['Sex'] = train_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04. Scaler\n",
+    "將數值的feature做正規化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>TitleGroup</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>-0.502445</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-1.566107</td>\n",
+       "      <td>38.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.663861</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.473674</td>\n",
-       "      <td>0.786845</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.786845</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.827377</td>\n",
+       "      <td>26.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>-0.258337</td>\n",
-       "      <td>0</td>\n",
-       "      <td>-0.473674</td>\n",
-       "      <td>-0.488854</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.488854</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>-1.566107</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.433312</td>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.473674</td>\n",
-       "      <td>0.420730</td>\n",
        "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.420730</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.827377</td>\n",
+       "      <td>35.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.433312</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>-0.473674</td>\n",
+       "      <td>0</td>\n",
        "      <td>-0.486337</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -485,15 +614,15 @@
        "</div>"
       ],
       "text/plain": [
-       "     Pclass  Sex       Age  SibSp     Parch      Fare  Embarked\n",
-       "0  0.827377    0 -0.565736      1 -0.473674 -0.502445         2\n",
-       "1 -1.566107    1  0.663861      1 -0.473674  0.786845         0\n",
-       "2  0.827377    1 -0.258337      0 -0.473674 -0.488854         2\n",
-       "3 -1.566107    1  0.433312      1 -0.473674  0.420730         2\n",
-       "4  0.827377    0  0.433312      0 -0.473674 -0.486337         2"
+       "    Age  Sex  Embarked  SibSp  Parch      Fare  TitleGroup\n",
+       "0  22.0    0         2      1      0 -0.502445           2\n",
+       "1  38.0    1         0      1      0  0.786845           3\n",
+       "2  26.0    1         2      0      0 -0.488854           1\n",
+       "3  35.0    1         2      1      0  0.420730           3\n",
+       "4  35.0    0         2      0      0 -0.486337           2"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +630,8 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "train_feature[['Pclass', 'Age', 'Parch', 'Fare']] = scaler.fit_transform(train_feature[['Pclass', 'Age', 'Parch', 'Fare']])\n",
+    "# train_feature[['Age', 'Parch', 'Fare']] = scaler.fit_transform(train_feature[['Age', 'Parch', 'Fare']])\n",
+    "train_feature[['Fare']] = scaler.fit_transform(train_feature[['Fare']])\n",
     "train_feature.head()"
    ]
   },
@@ -528,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,16 +739,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3254769921436588"
+       "0.3108866442199775"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -960,27 +1090,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "test = pd.read_csv('test.csv')\n",
     "\n",
-    "test_feature = test.drop(['Name', 'Ticket', 'PassengerId','Cabin'], axis=1)\n",
+    "# test_feature = test.drop(['Name', 'Ticket', 'PassengerId','Cabin'], axis=1)\n",
+    "test_feature = test[['Age', 'Sex', 'Embarked', 'SibSp', 'Parch', 'Pclass']].copy()\n",
+    "\n",
     "median_age = test_feature['Age'].dropna().median()\n",
     "test_feature.loc[ (test_feature['Age'].isnull()), 'Age'] = median_age\n",
+    "\n",
     "test_feature['Embarked'] = test_feature['Embarked'].fillna(test_feature['Embarked'].mode()[0])\n",
     "test_feature['Embarked'] = test_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)\n",
+    "# test_feature = pd.concat([test_feature, pd.get_dummies(test_feature['Embarked'])], axis=1)\n",
     "test_feature['Sex'] = test_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)\n",
+    "# fare有空值\n",
+    "# test_feature.loc[ (test_feature['Fare'].isnull()), 'Fare'] = test_feature['Fare'].dropna().median()\n",
     "\n",
-    "# test['Title'] = test['Name'].map(lambda name:name.split(',')[1].split('.')[0].strip())\n",
-    "# test['TitleGroup'] = test['Title'].map(title_dict)\n",
+    "\n",
+    "# test_feature = pd.concat([test_feature, pd.get_dummies(test_feature['Pclass'])], axis=1)\n",
+    "\n",
+    "test['Title'] = test['Name'].map(lambda name:name.split(',')[1].split('.')[0].strip())\n",
+    "test['TitleGroup'] = test['Title'].map(title_dict)\n",
+    "test.loc[ (test['TitleGroup'].isnull()), 'TitleGroup'] = test['TitleGroup'].dropna().mode()\n",
+    "\n",
+    "test_feature['TitleGroup'] = le.transform(test['TitleGroup'])\n",
+    "\n",
     "# test_feature = pd.concat([test_feature, pd.get_dummies(test['TitleGroup'])], axis=1)\n",
+    "\n",
     "# test_feature.insert(loc=10, column='Noble', value=0)\n",
     "\n",
-    "# fare有空值\n",
-    "test_feature.loc[ (test_feature['Fare'].isnull()), 'Fare'] = test_feature['Fare'].dropna().median()\n",
-    "test_feature[['Pclass', 'Age', 'Parch', 'Fare']] = scaler.transform(test_feature[['Pclass', 'Age', 'Parch', 'Fare']])\n",
+    "# test_feature[['Age', 'Parch', 'Fare']] = scaler.transform(test_feature[['Age', 'Parch', 'Fare']])\n",
+    "# test_feature[['Fare']] = scaler.transform(test_feature[['Fare']])\n",
     "\n",
     "y_pred = pla_predict(test_feature)"
    ]
@@ -994,16 +1137,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7607655502392344"
+       "0.7727272727272727"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1024,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1234,7 @@
        "4          896         1"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
