--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -193,12 +193,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train_feature = DF.drop(['Name', 'Ticket', 'PassengerId','Survived','Cabin'], axis=1)\n",
-    "train_feature = DF[['Age', 'Sex', 'Embarked', 'SibSp', 'Parch', 'Pclass']].copy()\n",
+    "train_feature = DF[['Age', 'Sex', 'Embarked', 'Pclass', 'SibSp', 'Parch']].copy()\n",
     "train_labels = DF['Survived'].copy()"
    ]
   },
@@ -251,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 製作新feature\n",
+    "#### 製作新feature - Title\n",
     "判斷Name裡的稱謂"
    ]
   },
@@ -334,13 +333,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### 製作新feature - Family\n",
+    "根據SipSp(同船兄弟姊妹/配偶的數量), Parch(同船父母/子女的數量)\n",
+    "\n",
+    "可見家人數不同，生存率也會有所不同，故分群\n",
+    "![](https://cdn-images-1.medium.com/max/1600/1*NqvytAx5qcG_zfaBBhLLqg.png)\n",
+    "\n",
+    "分成獨自一人, 1~3, 4~6, 6~10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DF['FamilySize'] =  DF['SibSp'] + DF['Parch']\n",
+    "DF.loc[DF['FamilySize'] == 0, 'Family'] = 'alone'\n",
+    "DF.loc[(DF['FamilySize'] > 0) & (DF['FamilySize'] <= 3), 'Family'] = 'small'\n",
+    "DF.loc[(DF['FamilySize'] > 3) & (DF['FamilySize'] <= 6), 'Family'] = 'medium'\n",
+    "DF.loc[DF['FamilySize'] > 6, 'Family'] = 'large'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature['Family'] = DF['Family'].map({'alone': 0, 'small': 1, 'medium': 2, 'large': 3}).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 製作新feature - Fare_5\n",
+    "由於票價的全距相當大，故將所有數據依照5個區間分區"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      (-0.001, 7.854]\n",
+       "1    (39.688, 512.329]\n",
+       "2        (7.854, 10.5]\n",
+       "3    (39.688, 512.329]\n",
+       "4        (7.854, 10.5]\n",
+       "Name: Fare_5, dtype: category\n",
+       "Categories (5, interval[float64]): [(-0.001, 7.854] < (7.854, 10.5] < (10.5, 21.679] < (21.679, 39.688] < (39.688, 512.329]]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "DF['Fare_5'] = pd.qcut(DF['Fare'], 5)\n",
+    "DF['Fare_5'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 03. One Hot Encoding\n",
     "將Embarked mapping成數值"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_feature = pd.concat([train_feature, pd.get_dummies(train_feature['Pclass'], prefix='pclass')], axis=1)"
+    "# train_feature = pd.concat([train_feature, pd.get_dummies(train_feature['Pclass'], prefix='pclass')], axis=1)"
    ]
   },
   {
@@ -374,7 +443,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Embarked</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>TitleGroup</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>22.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>female</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>35.0</td>\n",
+       "      <td>male</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Age     Sex  Embarked  Pclass  SibSp  Parch  TitleGroup\n",
+       "0  22.0    male         2       3      1      0           2\n",
+       "1  38.0  female         0       1      1      0           3\n",
+       "2  26.0  female         2       3      0      0           1\n",
+       "3  35.0  female         2       1      1      0           3\n",
+       "4  35.0    male         2       3      0      0           2"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "train_feature['TitleGroup'] = le.fit_transform(DF['TitleGroup'])\n",
+    "train_feature.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fare 做label encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    4\n",
+       "2    1\n",
+       "3    4\n",
+       "4    1\n",
+       "Name: Fare_5, dtype: int64"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "le_fare = preprocessing.LabelEncoder()\n",
+    "train_feature['Fare_5'] = le_fare.fit_transform(DF['Fare_5'])\n",
+    "train_feature['Fare_5'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Family做one hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_feature = pd.concat([train_feature, pd.get_dummies(train_feature['Family'])], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "將TitleGroup 做one hot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train_feature = pd.concat([train_feature, pd.get_dummies(DF['TitleGroup'])], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "將sex mapping成數值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_feature['Sex'] = train_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 04. Scaler\n",
+    "將數值的feature做正規化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -404,156 +674,6 @@
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
        "      <th>Pclass</th>\n",
-       "      <th>TitleGroup</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>22.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>26.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Age     Sex  Embarked  SibSp  Parch  Pclass  TitleGroup\n",
-       "0  22.0    male         2      1      0       3           2\n",
-       "1  38.0  female         0      1      0       1           3\n",
-       "2  26.0  female         2      0      0       3           1\n",
-       "3  35.0  female         2      1      0       1           3\n",
-       "4  35.0    male         2      0      0       3           2"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn import preprocessing\n",
-    "le = preprocessing.LabelEncoder()\n",
-    "train_feature['TitleGroup'] = le.fit_transform(DF['TitleGroup'])\n",
-    "train_feature.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "將TitleGroup 做one hot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_feature = pd.concat([train_feature, pd.get_dummies(DF['TitleGroup'])], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "將sex mapping成數值"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_feature['Sex'] = train_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 04. Scaler\n",
-    "將數值的feature做正規化"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>Embarked</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
        "      <th>Fare</th>\n",
        "      <th>TitleGroup</th>\n",
        "    </tr>\n",
@@ -562,50 +682,55 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>22.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>male</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>-0.502445</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>female</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.786845</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>26.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>female</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>-0.488854</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>female</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.420730</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>male</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>3</td>\n",
        "      <td>-0.486337</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -614,15 +739,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    Age  Sex  Embarked  SibSp  Parch      Fare  TitleGroup\n",
-       "0  22.0    0         2      1      0 -0.502445           2\n",
-       "1  38.0    1         0      1      0  0.786845           3\n",
-       "2  26.0    1         2      0      0 -0.488854           1\n",
-       "3  35.0    1         2      1      0  0.420730           3\n",
-       "4  35.0    0         2      0      0 -0.486337           2"
+       "    Age     Sex  Embarked  SibSp  Parch  Pclass      Fare  TitleGroup\n",
+       "0  22.0    male         2      1      0       3 -0.502445           2\n",
+       "1  38.0  female         0      1      0       1  0.786845           3\n",
+       "2  26.0  female         2      0      0       3 -0.488854           1\n",
+       "3  35.0  female         2      1      0       1  0.420730           3\n",
+       "4  35.0    male         2      0      0       3 -0.486337           2"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,16 +864,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3108866442199775"
+       "0.3063973063973064"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1066,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,25 +1215,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "test = pd.read_csv('test.csv')\n",
+    "# fare有空值\n",
+    "test.loc[ (test['Fare'].isnull()), 'Fare'] = test['Fare'].dropna().median()\n",
     "\n",
-    "# test_feature = test.drop(['Name', 'Ticket', 'PassengerId','Cabin'], axis=1)\n",
-    "test_feature = test[['Age', 'Sex', 'Embarked', 'SibSp', 'Parch', 'Pclass']].copy()\n",
+    "test_feature = test[['Age', 'Sex', 'Embarked', 'Pclass', 'SibSp', 'Parch']].copy()\n",
     "\n",
     "median_age = test_feature['Age'].dropna().median()\n",
     "test_feature.loc[ (test_feature['Age'].isnull()), 'Age'] = median_age\n",
     "\n",
     "test_feature['Embarked'] = test_feature['Embarked'].fillna(test_feature['Embarked'].mode()[0])\n",
     "test_feature['Embarked'] = test_feature['Embarked'].map({'C': 0, 'Q': 1, 'S':2}).astype(int)\n",
-    "# test_feature = pd.concat([test_feature, pd.get_dummies(test_feature['Embarked'])], axis=1)\n",
     "test_feature['Sex'] = test_feature['Sex'].map({'male': 0, 'female': 1}).astype(int)\n",
-    "# fare有空值\n",
-    "# test_feature.loc[ (test_feature['Fare'].isnull()), 'Fare'] = test_feature['Fare'].dropna().median()\n",
     "\n",
+    "\n",
+    "# test['FamilySize'] = test['SibSp'] + test['Parch']\n",
+    "# test.loc[test['FamilySize'] == 0, 'Family'] = 'alone'\n",
+    "# test.loc[(test['FamilySize'] > 0) & (test['FamilySize'] <= 3), 'Family'] = 'small'\n",
+    "# test.loc[(test['FamilySize'] > 3) & (test['FamilySize'] <= 6), 'Family'] = 'medium'\n",
+    "# test.loc[test['FamilySize'] > 6, 'Family'] = 'large'\n",
+    "# test_feature['Family'] = test['Family'].map({'alone': 0, 'small': 1, 'medium': 2, 'large': 3}).astype(int)\n",
     "\n",
     "# test_feature = pd.concat([test_feature, pd.get_dummies(test_feature['Pclass'])], axis=1)\n",
     "\n",
@@ -1118,11 +1248,14 @@
     "\n",
     "test_feature['TitleGroup'] = le.transform(test['TitleGroup'])\n",
     "\n",
-    "# test_feature = pd.concat([test_feature, pd.get_dummies(test['TitleGroup'])], axis=1)\n",
-    "\n",
     "# test_feature.insert(loc=10, column='Noble', value=0)\n",
     "\n",
+    "test['Fare_5'] = pd.qcut(test['Fare'], 5)\n",
+    "le_fare2 = preprocessing.LabelEncoder()\n",
+    "test_feature['Fare_5'] = le_fare2.fit_transform(test['Fare_5'])\n",
+    "\n",
     "# test_feature[['Age', 'Parch', 'Fare']] = scaler.transform(test_feature[['Age', 'Parch', 'Fare']])\n",
+    "\n",
     "# test_feature[['Fare']] = scaler.transform(test_feature[['Fare']])\n",
     "\n",
     "y_pred = pla_predict(test_feature)"
@@ -1137,16 +1270,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7727272727272727"
+       "0.6770334928229665"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
