Add bias and get new record

--- a/CS657 ML/HW01 PLA.ipynb
+++ b/CS657 ML/HW01 PLA.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
        "Categories (5, interval[float64]): [(-0.001, 7.854] < (7.854, 10.5] < (10.5, 21.679] < (21.679, 39.688] < (39.688, 512.329]]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "4  35.0    male         2       3      0      0           2"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +575,7 @@
        "Name: Fare_5, dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -671,67 +671,61 @@
        "      <th>Age</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Embarked</th>\n",
+       "      <th>Pclass</th>\n",
        "      <th>SibSp</th>\n",
        "      <th>Parch</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Fare</th>\n",
        "      <th>TitleGroup</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>22.0</td>\n",
-       "      <td>male</td>\n",
+       "      <td>-0.565736</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
+       "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>-0.502445</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>38.0</td>\n",
-       "      <td>female</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.663861</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.786845</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>26.0</td>\n",
-       "      <td>female</td>\n",
+       "      <td>-0.258337</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.488854</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>female</td>\n",
+       "      <td>0.433312</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.420730</td>\n",
+       "      <td>0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>35.0</td>\n",
-       "      <td>male</td>\n",
+       "      <td>0.433312</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>3</td>\n",
-       "      <td>-0.486337</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -739,15 +733,15 @@
        "</div>"
       ],
       "text/plain": [
-       "    Age     Sex  Embarked  SibSp  Parch  Pclass      Fare  TitleGroup\n",
-       "0  22.0    male         2      1      0       3 -0.502445           2\n",
-       "1  38.0  female         0      1      0       1  0.786845           3\n",
-       "2  26.0  female         2      0      0       3 -0.488854           1\n",
-       "3  35.0  female         2      1      0       1  0.420730           3\n",
-       "4  35.0    male         2      0      0       3 -0.486337           2"
+       "        Age  Sex  Embarked  Pclass  SibSp  Parch  TitleGroup\n",
+       "0 -0.565736    0         2       3      1      0           2\n",
+       "1  0.663861    1         0       1      1      0           3\n",
+       "2 -0.258337    1         2       3      0      0           1\n",
+       "3  0.433312    1         2       1      1      0           3\n",
+       "4  0.433312    0         2       3      0      0           2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,9 +749,27 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "# train_feature[['Age', 'Parch', 'Fare']] = scaler.fit_transform(train_feature[['Age', 'Parch', 'Fare']])\n",
-    "train_feature[['Fare']] = scaler.fit_transform(train_feature[['Fare']])\n",
+    "train_feature[['Age']] = scaler.fit_transform(train_feature[['Age']])\n",
     "train_feature.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "用minMax scaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# 與standard不同, 這會縮到 0-1\n",
+    "scaler = MinMaxScaler()\n",
+    "train_feature[['Age']] = scaler.fit_transform(train_feature[['Age']])"
    ]
   },
   {
@@ -783,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,9 +850,9 @@
     "            # select a row as input vector \n",
     "            inputVector = data.iloc[ix]\n",
     "            # uses global variable in the function\n",
-    "            global weights\n",
+    "            global weights, bias\n",
     "            # take the dot product of input and weight\n",
-    "            dotproduct = np.dot(inputVector, weights)\n",
+    "            dotproduct = np.dot(inputVector, weights) + bias\n",
     "            # 經過激勵函數\n",
     "            estimatedLabel = np.sign(dotproduct)\n",
     "            \n",
@@ -856,6 +868,8 @@
     "            # 比較預測的label與答案\n",
     "            if actualLabel != estimatedLabel:   \n",
     "                weights = weights + actualLabel*learningRate*inputVector\n",
+    "                # 訓練bias\n",
+    "                bias = bias + actualLabel*learningRate\n",
     "                err+=1\n",
     "                \n",
     "        global errors\n",
@@ -864,16 +878,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3063973063973064"
+       "0.26823793490460157"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -881,6 +895,40 @@
    "source": [
     "pla_simple(train_feature, train_labels, Iterations)\n",
     "errors[14]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.287317620650954,\n",
+       " 0.265993265993266,\n",
+       " 0.27497194163860833,\n",
+       " 0.27048260381593714,\n",
+       " 0.2828282828282828,\n",
+       " 0.2839506172839506,\n",
+       " 0.26823793490460157,\n",
+       " 0.2760942760942761,\n",
+       " 0.2648709315375982,\n",
+       " 0.27048260381593714,\n",
+       " 0.2671156004489338,\n",
+       " 0.26374859708193044,\n",
+       " 0.28058361391694725,\n",
+       " 0.28170594837261503,\n",
+       " 0.26823793490460157]"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "errors"
    ]
   },
   {
@@ -925,24 +973,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### with sgd"
+    "### 2. with bias"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true,
-     "source_hidden": true
-    }
-   },
+   "execution_count": 195,
+   "metadata": {},
    "outputs": [],
    "source": [
     "weights = np.zeros(len(train_feature.columns))\n",
     "\n",
-    "learningRate = 0.1\n",
+    "learningRate = 0.01\n",
     "\n",
     "bias = 0\n",
     "\n",
@@ -953,15 +995,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "execution_count": 196,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def pla_sgd(data, labels, iterations):\n",
+    "def pla_bias(data, labels, iterations):\n",
     "    for numIter in range(Iterations):\n",
     "        err = 0  # reset the error counter\n",
     "        # For each handwritten digit in training set,\n",
@@ -969,9 +1007,11 @@
     "            # select a row as input vector \n",
     "            inputVector = data.iloc[ix]\n",
     "            # uses global variable in the function\n",
-    "            global weights\n",
-    "            # take the dot product of input and weight\n",
-    "            dotproduct = np.dot(inputVector, weights)\n",
+    "            global weights, bias\n",
+    "            # take the dot product of input and weight, 並加上bias\n",
+    "            dotproduct = np.dot(inputVector, weights) + bias\n",
+    "            # 加上bias\n",
+    "            # dotproduct = dotproduct + bias\n",
     "            # 經過激勵函數\n",
     "            estimatedLabel = np.sign(dotproduct)\n",
     "            \n",
@@ -984,7 +1024,6 @@
     "                # SGD: expect - predict 計算 loss\n",
     "                weights = weights + (actualLabel - estimatedLabel)*inputVector*learningRate\n",
     "                # 訓練bias\n",
-    "                global bias\n",
     "                bias = bias + (actualLabel - estimatedLabel)*learningRate\n",
     "                err+=1\n",
     "                \n",
@@ -994,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 197,
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1005,16 +1044,16 @@
     {
      "data": {
       "text/plain": [
-       "0.6947250280583613"
+       "0.6891133557800224"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pla_sgd(train_feature, train_labels, Iterations)\n",
+    "pla_bias(train_feature, train_labels, Iterations)\n",
     "errors[19]"
    ]
   },
@@ -1129,7 +1168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. PLA Pocket演算法"
+    "### 3. PLA Pocket"
    ]
   },
   {
@@ -1191,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,8 +1240,8 @@
     "        inputVector = data.iloc[ix]\n",
     "        global weights, bias\n",
     "        dotproduct = np.dot(inputVector, weights)  # take the dot product of input and weight\n",
-    "        # bias 目前只會降低準確度\n",
-    "        # dotproduct = dotproduct + bias\n",
+    "        # bias 平移函數來增加彈性 (若訓練時有用,這行就要開啟)\n",
+    "        dotproduct = dotproduct + bias\n",
     "        estimatedLabel = np.sign(dotproduct)\n",
     "        if estimatedLabel == -1:\n",
     "            estimatedLabel = 0\n",
@@ -1215,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1254,9 +1293,7 @@
     "le_fare2 = preprocessing.LabelEncoder()\n",
     "test_feature['Fare_5'] = le_fare2.fit_transform(test['Fare_5'])\n",
     "\n",
-    "# test_feature[['Age', 'Parch', 'Fare']] = scaler.transform(test_feature[['Age', 'Parch', 'Fare']])\n",
-    "\n",
-    "# test_feature[['Fare']] = scaler.transform(test_feature[['Fare']])\n",
+    "test_feature[['Age']] = scaler.transform(test_feature[['Age']])\n",
     "\n",
     "y_pred = pla_predict(test_feature)"
    ]
@@ -1270,16 +1307,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6770334928229665"
+       "0.7464114832535885"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1300,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1374,7 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>893</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1352,7 +1389,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>896</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1361,13 +1398,13 @@
       "text/plain": [
        "   PassengerId  Survived\n",
        "0          892         0\n",
-       "1          893         1\n",
+       "1          893         0\n",
        "2          894         0\n",
        "3          895         0\n",
-       "4          896         1"
+       "4          896         0"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1383,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
